
//James Friedenberg 3/9/2016 5:46pm
	-kek
	-Added edited version of the item, battle, and basic UIs
	-Added broken if statements to allow the user to switch between menus while paused

//Juri Kiin 3/14/16 10:43 AM
	- Changed the gamestates to add for the UI menu's
	- Fixed the UI so it all works nice (Button non functioning.)

// Andrew and Dustin 6:09 PM 
	- Player now animates and moves! 
	- Test map and enemy added, they work. No collision with enemy yet. 
	- UI draw moved, however commented out the draw for the in game UI because you cant see map with it present.

//James Friedenberg 6:40pm
	- Edited basic UI to be transparent and display player hp
	- Added consumable potion code
	- Added stat numbers to the stats menu
	- Added a boost variable to the player class

//Dustin Knowlton 7:17pm
	-few small adjustments to the move class, failed to fix enemy collision.


//Juri Kiin 3:07 PM	3/23/16
	- Created the Enemy Creation tool that allows the user to input stats for the enemy, and it creates a binary file with those stats stored.
	- Added a ReadFiles() method that loads in the data from the binary files, and created an enemy object with that data.

//Juri Kiin 10:42 AM	3/28/16
	- Fixed the external tool so it works properly


//Juri Kiin 4:58 PM	3/30/16
	- Fixed so the players created with the tool are made and drawn to the screen.
	- Collisions still not working correctly
	- Added code to load the correct background based on what level the player is in.

//Juri Kiin 11:44 PM 	4/5/16
	-Added ArrowSpawner.cs: creates arrow objects that are used for the blocking mechanic
	-Added Arrow.cs: Creates an object to hold the arrow texture and the rectangle.
	-Added another gamestate that controls the combat phases, and does the respective job
	-Cleaned up unused variables
	
//James Friedenberg + Juri Kiin 4:50 PM 4/6/16
	-Fixed blocking mechanic so random arrows spawn and move across the screen during combat
	-Loaded in new protag/antag sprites
